# Drone-Party

./: .commitlintrc.json  .gitignore  README.md  architecture.pptx  cahier des charges.docx  package.json  sonarQube.docx  template_interface.py
.github/: dependabot.yml
.husky/: commit-msg
.scannerwork/: report-task.txt
Master_API/: Dockerfile  config.py  main.py  requierment.txt  test.py
Sound_API/: Pipfile  Sound API.postman_collection.json  config.py  worker.py
User_API/: .eslintrc.js  Dockerfile  app.ts  index.ts  notes.txt  package.json  routes.test.js
Vosk/: AI STT Vosk.ipynb  STT Microphone.ipynb  requirement.txt
client_facial_recognition/: Face Recognition.ipynb  Pipfile  STT Microphone.ipynb  facial_recognition.py  requirements.txt
client_natif/: CMakeLists.txt  CMakeLists.txt.old  PDCP_layout.glade  build.sh  joystickLib.cpp
client_natif/include/: APIService.hpp  GamePadService.hpp  PDCPApp.hpp  PDCPMacros.hpp
client_natif/include/Actions/: Action.hpp  ParameterizedAction.hpp  UnparameterizedAction.hpp
client_natif/src/: APIService.cpp  GamePadService.cpp  PDCPApp.cpp  main.cpp
client_natif/src/Actions/: Action.cpp  ParameterizedAction.cpp  UnparameterizedAction.cpp
client_natif/src/old/include/: DirectionButton.hpp
client_natif/src/old/include/Containers/: ControlPanelContainer.hpp  DisplayContainer.hpp  MainContainer.hpp  SideContainer.hpp
client_natif/src/old/src/: DirectionButton.cpp
client_natif/src/old/src/Containers/: ControlPanelContainer.cpp  DisplayContainer.cpp  MainContainer.cpp  SideContainer.cpp
client_stt/: Pipfile  (+4 more)
(+157 files in other folders)
